configuration and style fixes

--- a/config/config.tex
+++ b/config/config.tex
@@ -1,30 +1,37 @@
-\usepackage{titling}
-\usepackage{natbib}
-\usepackage{har2nat}
-\usepackage{underscore}
-\usepackage{titlesec}
-\usepackage{graphicx}
-\usepackage{mathtools}
-\usepackage{listings}
+\usepackage[export]{adjustbox}
+\usepackage[font=small]{caption}
+\usepackage[parfill]{parskip}
+\usepackage[top=1in, bottom=1in, left=1.5in, right=1in]{geometry}
+\usepackage{array}
+\usepackage{colortbl}
 \usepackage{dirtytalk}
+\usepackage{fancyhdr}
 \usepackage{float}
 \usepackage{fontspec}
-\usepackage{minted}
-\usepackage{tcolorbox}
-\usepackage{multirow}
-\usepackage{rotating}
-\usepackage{array}
-\usepackage{setspace}
-\usepackage{colortbl}
+\usepackage{graphicx}
+\usepackage{har2nat}
 \usepackage{hhline}
 \usepackage{hyperref}
+\usepackage{listings}
+\usepackage{mathtools}
+\usepackage{minted}
+\usepackage{multirow}
+\usepackage{natbib}
+\usepackage{rotating}
+\usepackage{setspace}
+\usepackage{tcolorbox}
+\usepackage{titling}
+\usepackage{underscore}
 \usepackage{upquote}
-\usepackage[export]{adjustbox}
-\usepackage[top=1in, bottom=1in, left=1.5in, right=1in]{geometry}
-\usepackage[font=small]{caption}
+
+% settings
+\title{A Multi-Purpose Recommender Framework}
+\author{Halil I. K{\"o}kl{\"u}}
+\date{September 2015}
+\def\supervisor{Nigel Martin}
 
 % spacing
-\input{./includes/spacing.tex}
+\input{./config/spacing.tex}
 
 % chapter style
 \addtokomafont{disposition}{\rmfamily}
