--- a/meta/title.tex
+++ b/meta/title.tex
@@ -8,24 +8,32 @@
 \textbf{\thetitle}
 \large
 
-\vspace{0.5in}
+\vspace{0.3in}
 
-\textbf{\theauthor}\\
+\Large
+\textbf{by \theauthor}\\
+\large
+
+\vspace{0.8in}
+
 Supervised by \supervisor\\
-\thedate
 
-\vspace{0.5in}
+\vspace{0.3in}
 
 A Project Report Submitted to\\
 Birkbeck College, University of London\\
 in Partial Fulfillment of the Requirements\\
 for the Degree of MSc Business Technologies
 
-\vspace{0.5in}
+\vspace{0.3in}
 
 Department of Computer Science \& Information Systems\\
 Birkbeck College, University of London
 
-\vfill
+\vspace{0.3in}
+
+\thedate
+
+\vspace{1in}
 
 \end{center}
