--- a/sections/acknowledgements.tex
+++ b/sections/acknowledgements.tex
@@ -1,4 +1,5 @@
 \chapter*{Acknowledgements}
+\addcontentsline{toc}{chapter}{Acknowledgements}
 
 Before anything, I would like to extend my thanks to my supervisor, Dr Nigel Martin, who has been a great support from the very start to the end. Also, I want to acknowledge my boss, Edward Griffith, for accommodating me to study while working.
 
