--- a/sections/appendices.tex
+++ b/sections/appendices.tex
@@ -1,3 +1,7 @@
+\chapter*{Appendices}
+\addcontentsline{toc}{chapter}{Appendices}
+\renewcommand{\thesection}{\Alph{section}}
+
 \section{User Manuals}
 
 \subsection{Content of the enclosed DVD}
@@ -125,7 +129,7 @@ Restart recommend worker:
 \end{minted}
 
 
-\subsection{Recommendation Engine: In-Common}
+\subsection{Recommender Engine: In-Common}
 
 \begin{itemize}
 \item Project Home: \url{https://github.com/halk/in-common}
@@ -158,7 +162,7 @@ Restart recommend worker:
 \end{minted}
 
 
-\subsection{Recommendation Engine: Item-Similarity}
+\subsection{Recommender Engine: Item-Similarity}
 
 \begin{itemize}
 \item Project Home: \url{https://github.com/halk/item-similarity}
@@ -241,11 +245,11 @@ Restart recommend worker:
 
 % \input{./listings/source/framework.tex}
 
-\subsection{Recommendation Engine: In-Common}
+\subsection{Recommender Engine: In-Common}
 
 % \input{./listings/source/inCommon.tex}
 
-\subsection{Recommendation Engine: Item-Similarity}
+\subsection{Recommender Engine: Item-Similarity}
 
 % \input{./listings/source/itemSimilarity.tex}
 
