--- a/sections/implementation.tex
+++ b/sections/implementation.tex
@@ -293,14 +293,15 @@ Returning to the hybrid recommender engine \emph{weighted} which has already bee
 This particular weighted implementation first fetches recommendations from each component recommender engine. The recommendations come with a score attached to it -- a numeric value indicating a level of preference over the other recommendations. The engine has a weight configured as a setting which is preferably a value between 0 and 1 so that the sum of all weights is 1. While looping through each component's recommendations, the score of the recommendation is multiplied with the respective weight for the component (see Figure \ref{fig:implementation-weighted}). This has a dampening effect on the scores. Then, the sets of recommendations are merged into one set. If a recommendation exists in more than one set, then the scores added together. Finally, this merged set is sorted by score in descending order.
 
 \begin{figure}[!ht]
+    \def\arraystretch{1.5}
     \begin{tabular}{|
     >{\columncolor[HTML]{ECF4FF}}l |
     >{\columncolor[HTML]{ECF4FF}}r |r|r|r|r|}
     \hline
-    \cellcolor[HTML]{BBDAFF}{\color[HTML]{000000} {\bf recommender}} & \multicolumn{1}{c|}{\cellcolor[HTML]{BBDAFF}{\color[HTML]{000000} {\bf weight}}} & \multicolumn{1}{c|}{\cellcolor[HTML]{BBDAFF}{\color[HTML]{000000} {\bf Item \#1}}} & \multicolumn{1}{c|}{\cellcolor[HTML]{BBDAFF}{\color[HTML]{000000} {\bf Item \#2}}} & \multicolumn{1}{c|}{\cellcolor[HTML]{BBDAFF}{\color[HTML]{000000} {\bf Item \#3}}} & \multicolumn{1}{c|}{\cellcolor[HTML]{BBDAFF}{\color[HTML]{000000} {\bf Item \#4}}} \\ \hline
-    viewed\_products                                                 & 0.25                                                                             & 1                                                                                & 0.75                                                                             & 0.5                                                                              & 1                                                                                \\ \hline
-    wishlisted\_products                                             & 0.75                                                                             & 0.5                                                                              & 0.95                                                                             & 0.3                                                                              & 1                                                                                \\ \hline
-    {\bf \it interesting\_products (weighted)}                       & {\bf \it 1}                                                                      & {\bf \it 0.625}                                                                  & {\bf \it 0.9}                                                                    & {\bf \it 0.35}                                                                   & {\bf \it 1}                                                                      \\ \hline
+    \cellcolor[HTML]{BBDAFF}{\color[HTML]{000000} {\textbf{recommender}}} & \multicolumn{1}{c|}{\cellcolor[HTML]{BBDAFF}{\color[HTML]{000000} {\textbf{weight}}}} & \multicolumn{1}{c|}{\cellcolor[HTML]{BBDAFF}{\color[HTML]{000000} {\textbf{Item \#1}}}} & \multicolumn{1}{c|}{\cellcolor[HTML]{BBDAFF}{\color[HTML]{000000} {\textbf{Item \#2}}}} & \multicolumn{1}{c|}{\cellcolor[HTML]{BBDAFF}{\color[HTML]{000000} {\textbf{Item \#3}}}} & \multicolumn{1}{c|}{\cellcolor[HTML]{BBDAFF}{\color[HTML]{000000} {\textbf{Item \#4}}}} \\ \hline
+    viewed\_products & 0.25 & 1 & 0.75 & 0.5 & 1 \\ \hline
+    wishlisted\_products & 0.75 & 0.5 & 0.95 & 0.3 & 1 \\ \hline
+    {\textbf{\emph{weighted recommender}}} & {\textbf{\emph{1}}} & {\textbf{\emph{0.625}}} & {\textbf{\emph{0.9}}} & {\textbf{\emph{0.35}}} & {\textbf{\emph{1}}} \\ \hline
     \end{tabular}
     \caption{Sample Calculation Table of Weighted Hybrid Recommender Engine}
     \label{fig:implementation-weighted}
