--- a/sections/references.tex
+++ b/sections/references.tex
@@ -1,5 +1,5 @@
 \renewcommand\bibname{References}
-\renewcommand\bibsection{\section{\refname}}
+\renewcommand\bibsection{\chapter{\refname}}
 
 \small
 \begin{singlespace}
