--- a/index.tex
+++ b/index.tex
@@ -1,35 +1,23 @@
-\documentclass[12pt,a4paper,oneside,openany,chapterprefix=false,bibliography=totocnumbered]{scrreprt}
-\input{./includes/config.tex}
-% meta
-\title{A Multi-Purpose Recommender Framework}
-\author{Halil I. K{\"o}kl{\"u}}
-\date{September 2015}
-\def\supervisor{Nigel Martin}
-% document
+\documentclass[11pt,a4paper,oneside,openany,chapterprefix=false,bibliography=totocnumbered]{scrreprt}
+
+\input{./config/config.tex}
+
 \begin{document}
 
 \input{./meta/title.tex}
-
-\clearpage
-\setcounter{page}{1}
-
 \input{./meta/declaration.tex}
-\input{./sections/abstract.tex}
-\input{./sections/acknowledgements.tex}
-
+\input{./meta/abstract.tex}
 \input{./meta/toc.tex}
 
+\input{./config/header.tex}
+
+\input{./sections/acknowledgements.tex}
 \input{./sections/introduction.tex}
 \input{./sections/architecture.tex}
 \input{./sections/implementation.tex}
 \input{./sections/evaluation.tex}
 \input{./sections/conclusion.tex}
-
-\chapter*{Appendices}
-\addcontentsline{toc}{chapter}{Appendices}
-\renewcommand{\thesection}{\Alph{section}}
-
-\input{./meta/bibl.tex}
+\input{./sections/references.tex}
 \input{./sections/appendices.tex}
 
 \end{document}
