--- a/sections/introduction.tex
+++ b/sections/introduction.tex
@@ -78,7 +78,7 @@ As mentioned, the primary objective of this project is the development of an fra
     \item[Non-restrictive] The usage of the framework should not restrict the capabilities of a recommender engine.
     \item[Encapsulated] Internals of domain applications and recommender engines should not be visible to each other.
     \item[Reusable] Recommender engines should be reusable. A domain application should be able to switch to another recommendation engine with minimal effort. Other recommenders shall be able to use recommendations from another recommender engine \cite{manouselis07}.
-    \item[Technologically unbiased] The framework should work with any technology.
+    \item[Technologically unbiased] The framework should support any technology stack and have no restrictions in that matter.
 \end{description}
 
 \subsection{Development of Two Distinct Recommender Engines}
